MDEV-37412 Corrupted page during recovery aborts the server

- 11.4 patch